LPS-63068 Add div class to fix margins

--- a/modules/apps/calendar/calendar-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/calendar/calendar-web/src/main/resources/META-INF/resources/css/main.scss
@@ -1,6 +1,10 @@
 @import "bourbon";
 @import "mixins";
 
+.calendar-booking {
+	padding: 16px 24px;
+}
+
 .calendar-booking-invitations {
 	min-height: 110px;
 
